--- a/tugas/tugas-p-2/style.css
+++ b/tugas/tugas-p-2/style.css
@@ -53,7 +53,7 @@ body {
   border-radius: 60%;
   border: 4px solid #e5e7eb;
   display: block;
-  margin: px auto;
+  margin: px auto;
 
 }
 
@@ -89,4 +89,11 @@ body {
 }
 .blue {
     color: blue;
+}
+hr {
+  text-align: center;
+  margin-left: 80px;
+  margin-right: 80px;
+  margin-top: 1cm;
+  border-radius: 5px;  /* sudut garis lebih halus */
 }
