--- a/tugas/tugas-p-3/style.css
+++ b/tugas/tugas-p-3/style.css
@@ -24,6 +24,7 @@ body {
     padding: 12px;
     border-radius: 12px;
     background-color: rgba(184, 183, 183, 0.162);
+    box-shadow: 5px 5px 10px #888888;
 }
 
 .title-pengantar {
@@ -165,9 +166,17 @@ nav a.active {
     padding: 12px;
     border-radius: 12px;
     background-color: rgba(184, 183, 183, 0.162);
+    box-shadow: #d1d0d0;
 }
 .gallery {
+  border-radius: 12px;
+  background-color: rgba(184, 183, 183, 0.162);
   text-align: center;
+  
+    margin: 160px;
+    margin-top: 48px;
+    box-shadow: 5px 5px 10px #c7c6c6;
+
 }
 .gallery h2 {
   color: blue;
@@ -247,7 +256,7 @@ body {
 }
 
 .navigasi a:hover {
-  background: #f2f2f2;
+  background: #eeecec;
 }
 
 .navigasi .aktif {
@@ -262,7 +271,7 @@ body {
   margin: 0 auto 40px auto;
   padding: 25px 30px;
   border-radius: 10px;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  box-shadow: 5px 5px 10px #d1d1d1;
 }
 
 /* Judul Form */
@@ -272,6 +281,7 @@ body {
   padding-left: 8px;
   font-size: 18px;
   margin-bottom: 8px;
+  box-shadow: 5px 5px 10px #d8d7d7;
 }
 
 .container p {
@@ -311,6 +321,7 @@ textarea {
 .checkbox-group label {
   margin-right: 15px;
   font-weight: normal;
+  display: inline-block;
 }
 
 /* Tombol */
